# math

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SPARSE_GRID_IMPLEMENTATION.md  TEST_RESULTS.md  add_copyright.sh  build_and_test.sh  compare_nodes.cpp  debug_2d_deg7.cpp  debug_dcuhre_2d.cpp  debug_rational_transform  investigate_systematic_error.cpp  test_1d_integration  test_2d_deg9.cpp  test_2d_deg9_exe  test_adaptive_int  test_cc_rules  test_cc_simple  test_cc_simple.cpp  test_cc_weights  test_cc_weights.cpp  test_debug_smolyak.cpp  test_gm_exact  test_gm_exactness  test_indices  test_indices.cpp  test_orbit  test_orbit_eval  test_orbit_evaluator  test_pipeline  test_poly_exact  test_poly_exact.cpp  test_reliability  test_scaling_hypothesis.cpp  test_smoke  test_smolyak_debug  test_smolyak_debug.cpp  test_sparse_full  test_sparse_full.cpp  (+9 more)
.github/workflows/: cubature-smoke.yml
benchmark/: CMakeLists.txt  basic_benchmark  basic_benchmark.cpp  boost_math_benchmarks.cpp  comparison_benchmark.cpp  results_analyzer.cpp  simple_benchmark.cpp  test_functions.hpp  test_genz_functions.cpp  working_benchmark.cpp
doc/: Jamfile  cubature.qbk  cubature_overview.qbk  cubature_toc.qbk  math.qbk
doc/cubature/: cubature.qbk
example/: CMakeLists.txt  cubature_adaptive_example.cpp
examples/: infinite_integrals.cpp  simplex_integrals.cpp
include/boost/math/cubature/: adaptive.hpp  concepts.hpp  constants.hpp  cubature.hpp  infinite.hpp  monte_carlo.hpp  oscillatory.hpp  policies.hpp  qmc.hpp  regions.hpp  simplex.hpp  sparse_grid.hpp  transforms.hpp  workspace.hpp
include/boost/math/cubature/detail/: adaptive_impl.hpp  adaptive_integrator_vector.hpp  adaptive_monte_carlo.hpp  adaptivity.hpp  algebraic_transforms.hpp  cc_rules.hpp  domain_transforms.hpp  exponential_transforms.hpp  filon_method.hpp  function_cache.hpp  gauss_hermite_rules.hpp  gauss_patterson_nodes.hpp  genz_malik_9_7_tables.hpp  genz_malik_9_7_tables_defs.hpp  genz_malik_evaluator.hpp  genz_malik_evaluator_vector.hpp  gm_rules.hpp  gm_rules_10d.hpp  gm_rules_4d.hpp  gm_rules_5d.hpp  gm_rules_6d.hpp  gm_rules_7d.hpp  gm_rules_8d.hpp  gm_rules_9d.hpp  gp_rules.hpp  levin_method.hpp  memory_pool.hpp  monte_carlo_base.hpp  orbit_evaluator.hpp  oscillatory_base.hpp  parallel_adaptive.hpp  parallel_executor.hpp  parallel_qmc.hpp  qmc_sequences.hpp  reliability_metrics.hpp  sobol_owen.hpp  sparse_grid_impl.hpp  variance_reduction.hpp  vector_adapter.hpp  vectorize.hpp
include/boost/random/: sobol.hpp
shaiko/: ALGORITHMS.md  API.md  ARCHITECTURE.md  BOOST_MATH_CUBATURE_PROMPT_ROADMAP.md  README_boost_math_cubature.md  REFERENCES.md  TECHNICAL_BLUEPRINT.md  TESTING_VALIDATION.md  genz_malik_2d_7_5.csv  genz_malik_2d_7_5.md  genz_malik_2d_7_5_CORRECTED.md  genz_malik_2d_nodes_weights.csv  genz_malik_3d_7_5.csv  genz_malik_3d_7_5.md  genz_malik_3d_7_5_nodes_deg5_FIXED.csv  genz_malik_3d_deg5_FIX.md  genz_malik_4d_7_5.md  genz_malik_4d_7_5_nodes_deg5.csv  genz_malik_4d_7_5_nodes_deg7.csv  genz_malik_5d_7_5.md  genz_malik_5d_7_5_nodes_deg5.csv  genz_malik_5d_7_5_nodes_deg7.csv  genz_malik_9_7_tables.hpp
shaiko/9-7_Updates/: GM_9-7_2D-5D.md  GM_9-7_CSV_README.md  GM_9-7_SHA256_MANIFEST.csv  GM_9-7_VALIDATION_INDEX.md  GM_9-7_d10_deg7 (1).csv  GM_9-7_d11_deg7 (1).csv  GM_9-7_d11_deg9 (1).csv  GM_9-7_d12_deg7 (1).csv  GM_9-7_d12_deg9 (1).csv  GM_9-7_d13_deg7 (1).csv  GM_9-7_d13_deg9 (1).csv  GM_9-7_d2_combined.csv  GM_9-7_d2_deg9 (1).csv  GM_9-7_d2_deg9.csv  GM_9-7_d3_combined.csv  GM_9-7_d3_deg7 (1).csv  GM_9-7_d3_deg7.csv  GM_9-7_d3_deg9.csv  GM_9-7_d4_deg7.csv  GM_9-7_d4_deg9.csv  GM_9-7_d5_combined.csv  GM_9-7_d5_deg7 (1).csv  GM_9-7_d5_deg7.csv  GM_9-7_d5_deg9.csv  GM_9-7_d6_deg9 (1).csv  GM_9-7_d7_deg9 (1).csv  GM_9-7_d8_deg7 (1).csv  GM_9-7_d9_deg9 (1).csv
shaiko/dimensions/: GM_9-7_d10_deg7.csv  GM_9-7_d10_deg9.csv  GM_9-7_d11_deg7.csv  GM_9-7_d11_deg9.csv  GM_9-7_d12_deg7.csv  GM_9-7_d12_deg9.csv  GM_9-7_d13_deg7.csv  GM_9-7_d13_deg9.csv  GM_9-7_d6_deg7.csv  GM_9-7_d6_deg9.csv  GM_9-7_d7_deg7.csv  GM_9-7_d7_deg9.csv  GM_9-7_d8_deg7.csv  GM_9-7_d8_deg9.csv  GM_9-7_d9_deg7.csv  GM_9-7_d9_deg9.csv
shaiko/updated_dimension/: GM_9-7_d10_deg9 (1).csv  GM_9-7_d2_deg7.csv  GM_9-7_d3_deg9 (1).csv  GM_9-7_d4_deg7 (1).csv  GM_9-7_d4_deg9 (1).csv  GM_9-7_d5_deg9 (1).csv  GM_9-7_d6_deg7 (1).csv  GM_9-7_d7_deg7 (1).csv  GM_9-7_d8_deg9 (1).csv  GM_9-7_d9_deg7 (1).csv
test/: CMakeLists.txt  Jamfile.v2  adaptive_integration_test  adaptive_integration_test.cpp  cc_rules_test.cpp  cubature_smoke_test.cpp  debug_integration.cpp  debug_rational_transform.cpp  genz_integration_test.cpp  genz_test_functions.hpp  genz_test_suite.cpp  gm97_exactness_test.cpp  gm97_raw_weight_sums_test.cpp  gm97_weight_sums_test.cpp  gm_rules_exactness_test.cpp  integration_pipeline_test.cpp  integration_test  integration_test.cpp  multiprecision_test.cpp  parallel_determinism_test.cpp  reliability_metrics_test.cpp  simple_build.sh  simple_polynomial_test.cpp  simplex_test  simplex_test.cpp  sparse_grid_test.cpp  test_1d_integration  test_1d_integration.cpp  test_adaptive_simple  test_adaptive_sparse_grid  test_adaptive_sparse_grid.cpp  test_adaptive_standalone  test_all_dimensions.cpp  test_debug  test_debug.cpp  test_duffy_debug  test_duffy_debug.cpp  test_gauss_hermite  test_gauss_hermite.cpp  test_gauss_patterson.cpp  (+33 more)
test/compile_test/: cubature_api_compile.cpp  gm_rules_api_compile.cpp
test/cubature/: CMakeLists.txt  test_adaptive.cpp  test_adaptive_standalone.cpp  test_genz_malik.cpp  test_high_dimensions.cpp  test_qmc.cpp  test_qmc_standalone.cpp  test_simplex.cpp  test_sparse_grid.cpp  test_sparse_grid_standalone.cpp  test_transforms.cpp  test_transforms_standalone.cpp
